--- a/src/index.html
+++ b/src/index.html
@@ -2,64 +2,88 @@
 <html lang="ru">
 
 <head>
-    <title>учебная хрень часть 1</title>
+    <title>учебная хрень</title>
     <meta charset="utf-8">
+    
 </head>
+
 <body>
-<div class="backMenu">
-<header>
-    <div class="upperMenu">
-        <div class="line line__burger">
-            <a href="#"><img src="./img/burger.png"></a>
-        </div>
-        <div class="line line__group">
-            <img src="./img/Group.png">
-        </div>
-        <div class="line line__search">
-            <a href="#"><img src="./img/search.png"></a>
-        </div>
-    </div>
-</header>
-<main>
-    <nav class="main-nav">
-        <ul class="nav-lists">
-            <li class="nav-list "><a href="#">Ремонт техники</a></li>
-            <li class="nav-list "><a href="#">Корпоративным клиентам</a></li>
-            <li class="nav-list "><a href="#">Услуги и сервисы</a></li>
-            <li class="nav-list "><a href="#">Продавцам техники</a></li>
-            <li class="nav-list "><a href="#">Партнерам</a></li>
-            <li class="nav-list "><a href="#">Производителям</a></li>
-            <li class="nav-list "><a href="#">Наши сервисные центры</a></li>
-            <li class="nav-list "><a href="#">Контакты</a></li>
+    <header>
+        <ul class="line">
+            <li class="line line__burger">
+                <a href="#"><img src="./img/burger.png"></a>
+            </li>
+            <li class="line line__der"></li>
+
+            <li class="line line__group">
+                <img src="./img/Group.png">
+            </li>
+            <li class="line line__der"></li>
+            <li class="line line__call">
+                <a href="#"><img src="./img/call.png"></a>
+            </li>
+            <li class="line line__chat">
+                <a href="#"><img src="./img/chat.png"></a>
+            </li>
+            <li class="line line__profile">
+                <a href="#"><img src="./img/profile.png"></a>
+            </li>
+            <li class="line line__der"></li>
+            <li class="line line__checkstatus">
+                <a href="#""><img src="./img/checkstatus.png"></a>
+            </li>
+            <li class="line line__repair">
+                <a href="#"><img src="./img/repair.png"></a>
+            </li>
         </ul>
-    </nav>
-</main>
-<footer>
-    <div class="footerMenu">
-        <div class="line line__call">
-            <a href="#"><img src="./img/call.png"></a>
+    </header>
+
+    <main>
+        <div class="tittle">
+            <h1> Услуги и сервисы</h1>
+            <ul class="main-line">
+                <li class="main-line  mamain-line__repair">
+                    <a href="#">Оставить заявку</a><img src="./img/repair.png">
+                </li>
+                <li class="main-line main-line__checkstatus">
+                    <a href="#">Оставить заявку</a><img src="./img/repair.png">
+                </li>
+            </ul>
         </div>
-        <div class="line line__chat">
-            <a href="#"><img src="./img/chat.png"></a>
-        </div>
-        <div class="line line__profile">
-            <a href="#"><img src="./img/profile.png"></a>
-        </div>
-        <div class="line__email">mail@cps.com</div>
-        <div class="line__tel">8 800 890 8900</div>
-    </div>
-    <div class="footerLang">
-        <div class="lang__ru">
-            <a href="#">RU</a>
-        </div>
-        <div class="lang__en">
-            <a href="#">EN</a>
-        </div>
-        <div class="lang__ch">
-            <a href="#">CH</a>
-        </div>
-</footer>
-</div>
+        <nav class="main-nav">
+            <ul class="nav-list">
+                <li class="nav-list nav-list__item"><a href="#">Ремонтируемые бренды</a></li>
+                <li class="nav-list nav-list__item"><a href="#">Ремонтируемые устройства</a></li>
+                <li class="nav-list nav-list__item"><a href="#">Дополнительные услуги</a></li>
+                <li class="nav-list nav-list__item"><a href="#">Цена на услуги</a></li>
+                <li class="nav-list nav-list__item"><a href="#">Адреса сервисных центров </a></li>
+                <li class="nav-list nav-list__item"><a href="#">Специальные цены</a></li>
+            </ul>
+        </nav>
+
+        <h2>Отзывы</h2>
+
+        <section class="text">
+            <div class="text text-text">
+                <div class="text-text  text-text__articl">
+                    <p>Мы являемся авторизованным сервистным центром по ремонту техники DEell.Только у нас вы можете
+                        отремрнтировать свой ноутбук Dell с официальной гарантией производителя.<br><br>
+
+                        Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера,что подтверждает
+                        большое количество постоянных клиентов. Мы гордимся тем,что к нам обращаются по рекомендациям и,
+                        в свою очередь,советуют нас своим родным и близким. </p>
+                </div>
+                <div class="text-text  text-text__link">
+                    <a href="#"><img src="./img/expand.png" width="25" height="25">Читать далee</a>
+                </div>
+            </div>
+
+            <div class="text text-img">
+                <img src="./img/Picture.png">
+            </div>
+        </section>
+
+    </main>
 </body>
 
 </html>
