--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,11 @@
-<<<<<<< HEAD
 <!doctype html>
 <html lang="ru">
 
 <head>
-    <title>учебная хрень часть 1</title>
+    <title>учебная хрень</title>
     <meta charset="utf-8">
-<<<<<<< HEAD
-    
-<link href="style.css" rel="stylesheet"></head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+</head>
 
 <body>
     <header>
@@ -131,84 +129,8 @@
                 </div>  
             </div>
         </template>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     </main>
-<script type="text/javascript" src="./js/bundle.js"></script></body>
-=======
-</head>
-<body>
-<div class="backMenu">
-<header>
-    <div class="upperMenu">
-        <div class="line line__burger">
-            <a href="#"><img src="./img/burger.png"></a>
-        </div>
-        <div class="line line__group">
-            <img src="./img/Group.png">
-        </div>
-        <div class="line line__search">
-            <a href="#"><img src="./img/search.png"></a>
-        </div>
-    </div>
-</header>
-<main>
-    <nav class="main-nav">
-        <ul class="nav-lists">
-            <li class="nav-list "><a href="#">Ремонт техники</a></li>
-            <li class="nav-list "><a href="#">Корпоративным клиентам</a></li>
-            <li class="nav-list "><a href="#">Услуги и сервисы</a></li>
-            <li class="nav-list "><a href="#">Продавцам техники</a></li>
-            <li class="nav-list "><a href="#">Партнерам</a></li>
-            <li class="nav-list "><a href="#">Производителям</a></li>
-            <li class="nav-list "><a href="#">Наши сервисные центры</a></li>
-            <li class="nav-list "><a href="#">Контакты</a></li>
-        </ul>
-    </nav>
-</main>
-<footer>
-    <div class="footerMenu">
-        <div class="line line__call">
-            <a href="#"><img src="./img/call.png"></a>
-        </div>
-        <div class="line line__chat">
-            <a href="#"><img src="./img/chat.png"></a>
-        </div>
-        <div class="line line__profile">
-            <a href="#"><img src="./img/profile.png"></a>
-        </div>
-        <div class="line__email">mail@cps.com</div>
-        <div class="line__tel">8 800 890 8900</div>
-    </div>
-    <div class="footerLang">
-        <div class="lang__ru">
-            <a href="#">RU</a>
-        </div>
-        <div class="lang__en">
-            <a href="#">EN</a>
-        </div>
-        <div class="lang__ch">
-            <a href="#">CH</a>
-        </div>
-</footer>
-</div>
 </body>
->>>>>>> parent of 46e319e (ver2)
 
 </html>
-=======
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <img src="./img/webpack.svg" alt="Webpack Logo" width="200px" />
-    <h3>Welcome to Webpack 4 starter </h3>
-  </body>
-</html>
->>>>>>> parent of fdf21d3 (ver 2)
