start work version

--- a/src/index.html
+++ b/src/index.html
@@ -10,29 +10,29 @@
 <body>
     <header>
         <ul class="line">
-            <li class="line line__burger">
+            <li class="line__burger">
                 <a href="#"><img src="./img/burger.png"></a>
             </li>
-            <li class="line line__der"></li>
+            <li class="line__der"></li>
 
-            <li class="line line__group">
+            <li class="line__group">
                 <img src="./img/Group.png">
             </li>
-            <li class="line line__der"></li>
-            <li class="line line__call">
+            <li class="line__der"></li>
+            <li class="line__call">
                 <a href="#"><img src="./img/call.png"></a>
             </li>
-            <li class="line line__chat">
+            <li class="line__chat">
                 <a href="#"><img src="./img/chat.png"></a>
             </li>
-            <li class="line line__profile">
+            <li class="line__profile">
                 <a href="#"><img src="./img/profile.png"></a>
             </li>
-            <li class="line line__der"></li>
-            <li class="line line__checkstatus">
+            <li class="line__der"></li>
+            <li class="line__checkstatus">
                 <a href="#"><img src="./img/checkstatus.png"></a>
             </li>
-            <li class="line line__repair">
+            <li class="line__repair">
                 <a href="#"><img src="./img/repair.png"></a>
             </li>
         </ul>
