--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="ru">
 
@@ -9,33 +10,39 @@
 
 <body>
     <header>
-        <ul class="line">
-            <li class="line__burger">
-                <a href="#"><img src="./img/burger.png"></a>
-            </li>
-            <li class="line__der"></li>
+        <div class="line">
+        <div class="line__item">
+            <div class="line__burger">
+                <a href="#"><img src="./img/burger.png" alt="burger"></a>
+            </div>
+            <div class="line__der"></div>
 
-            <li class="line__group">
+            <div class="line__group">
                 <img src="./img/Group.png">
-            </li>
-            <li class="line__der"></li>
-            <li class="line__call">
+            </div>
+
+        </div>    
+          
+        <div class="line__item">
+            <div class="line__call scrin__360">
                 <a href="#"><img src="./img/call.png"></a>
-            </li>
-            <li class="line__chat">
+            </div>
+            <div class="line__chat scrin__360">
                 <a href="#"><img src="./img/chat.png"></a>
-            </li>
-            <li class="line__profile">
+            </div>
+            <div class="line__profile scrin__360">
                 <a href="#"><img src="./img/profile.png"></a>
-            </li>
-            <li class="line__der"></li>
-            <li class="line__checkstatus">
+            </div>
+              
+            <div class="line__der"></div>
+            <div class="line__checkstatus">
                 <a href="#"><img src="./img/checkstatus.png"></a>
-            </li>
-            <li class="line__repair">
+            </div>
+            <div class="line__repair">
                 <a href="#"><img src="./img/repair.png"></a>
-            </li>
-        </ul>
+            </div>    
+        </div> 
+    </div>
     </header>
 
     <main>
