made work bloc3 footer

--- a/src/index.html
+++ b/src/index.html
@@ -110,11 +110,11 @@
                 <label class="line_text" for="check">Показать все</label>
             </div>
             <div class="slaid">
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper brand"></div>
-            <div class="swip-pad"></div>
-            <div class="swiper-pagination"></div>
-          </div>
+                <div class="swiper mySwiper">
+                <div class="swiper-wrapper brand"></div>
+                <div class="swip-pad"></div>
+                <div class="swiper-pagination"></div>
+           </div>
             </div> 
             <div class="upperHed">
                 <div class="upperHed-text">Ремонт различных видов техники</div>
@@ -130,11 +130,11 @@
                  </div>
                 
             <div class="slaid">
-                <div class="swiper mySwiper">
-                <div class="swiper-wrapper rem">
+                     <div class="swiper mySwiper">
+                     <div class="swiper-wrapper rem">
                      </div>
                      <div class="swip-pad"></div>
-                <div class="swiper-pagination"></div>
+                     <div class="swiper-pagination"></div>
                   </div>
                     </div>
 
@@ -325,9 +325,9 @@
 
             <footer>
                 <div class="footer">
-                  <div>© 2019 CPS <br>Разработано командой Apesong  </div>
-                  <div>Политика конфиденциальности</div>
-                  <div>Информация, размещенная на данной странице, не является публичной офертой</div>
+                  <div class="footer__item">© 2019 CPS <br>Разработано командой Apesong  </div>
+                  <div class="footer__item">Политика конфиденциальности</div>
+                  <div class="footer__item">Информация, размещенная на данной странице, не является публичной офертой</div>
                 </div>
             </footer>
 
