--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,8 @@
       content = "width = device-width, initial-scale = 1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
-
 <body>
     
-
     <main class="main">
     
         <div class="line">
@@ -49,9 +47,6 @@
         </div> 
     </div>
    
-
-   
-
         <div class="block1">
         <div class="tittle">
             <h1> Услуги и сервисы</h1>
@@ -60,7 +55,7 @@
                     <a href="#">Оставить заявку</a><img src="./img/repair.png" alt="scrin">
                 </li>
                 <li class="main-line main-line__checkstatus">
-                    <a href="#">Оставить заявку</a><img src="./img/checkstatus.png" alt="scrin">
+                    <a href="#">Статус ремонта</a><img src="./img/checkstatus.png" alt="scrin">
                 </li>
             </ul>
         </div>
