--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
 <head>
     <title>учебная хрень</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 <link href="style.css" rel="stylesheet"></head>
-
 <body>
     
-
     <main class="main">
     
         <div class="line">
@@ -47,9 +46,6 @@
         </div> 
     </div>
    
-
-   
-
         <div class="block1">
         <div class="tittle">
             <h1> Услуги и сервисы</h1>
@@ -58,7 +54,7 @@
                     <a href="#">Оставить заявку</a><img src="./img/repair.png" alt="scrin">
                 </li>
                 <li class="main-line main-line__checkstatus">
-                    <a href="#">Оставить заявку</a><img src="./img/checkstatus.png" alt="scrin">
+                    <a href="#">Статус ремонта</a><img src="./img/checkstatus.png" alt="scrin">
                 </li>
             </ul>
         </div>
