--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
                 <input class="line_input" type="checkbox" id="check">
                 <label class="line_text" for="check">Показать все</label>
             </div>
-            <div class="slaid">
+            <div class="slaid slaid-cats">
                 <div class="swiper mySwiper">
                 <div class="swiper-wrapper brand"></div>
                 <div class="swip-pad"></div>
@@ -126,7 +126,7 @@
                      <label class="remonts-line_text" for="remonts-check">Показать все</label>
                  </div>
                 
-            <div class="slaid">
+            <div class="slaid slaid-remonts">
                      <div class="swiper mySwiper">
                      <div class="swiper-wrapper rem">
                      </div>
@@ -233,7 +233,7 @@
                  </tr>
               </table>
 
-              <div class="slaid">
+              <div class="slaid slaid-tab">
               <div class="swiper mySwiper">
                   <div class="swiper-wrapper table">
                    <div class="swiper-slide tabl"> 
@@ -344,7 +344,7 @@
                 </div>  
         </template>
         <template id="cat-slid">
-            <div class="swiper-slide">
+            <div class="swiper-slide swiper-slide__cat">
                 <div class="cat">
                     <div class="bitmap"><img src="">
                     </div>
@@ -363,7 +363,7 @@
             </div>  
     </template>
     <template id="remont-slid">
-        <div class="swiper-slide">
+        <div class=" swiper-slide swiper-slide__remont">
             <div class="remont">
                 <div class="bitmap">
                 </div>
