--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@
               </table>
 
         <div class="slaid slaid-tab">
-              <div class="swiper mySwiper">
+              <div class="swiper mySwiper1">
                   <div class="swiper-wrapper table">
                    <div class="swiper-slide tabl"> 
                     <div class="tabl-uslugi">Ремонтные услуги</div>
@@ -306,7 +306,6 @@
                 </div>
                 </div>
             </div>
-              <div class="swip-pad"></div>
                   <div class="swiper-pagination"></div>
                 </div>  
             </div>
