--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
               </table>
 
         <div class="slaid slaid-tab">
-              <div class="swiper mySwiper">
+              <div class="swiper mySwiper1">
                   <div class="swiper-wrapper table">
                    <div class="swiper-slide tabl"> 
                     <div class="tabl-uslugi">Ремонтные услуги</div>
@@ -305,7 +305,6 @@
                 </div>
                 </div>
             </div>
-              <div class="swip-pad"></div>
                   <div class="swiper-pagination"></div>
                 </div>  
             </div>
