--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <label class="line_text" for="check">Показать все</label>
             </div>
             <div class="slaid slaid-cats">
-            <div class="swiper mySwiper">
+            <div class="swiper mySwiperCat">
                 <div class="swiper-wrapper brand"></div>
                 <div class="swiper-pagination"></div>
            </div>
@@ -128,7 +128,7 @@
                  </div>
                 
             <div class="slaid slaid-remonts">
-                <div class="swiper mySwiper">
+                <div class="swiper mySwiperRemont">
                      <div class="swiper-wrapper rem">
                      </div>
                      <div class="swiper-pagination"></div>
@@ -235,60 +235,10 @@
               </table>
 
         <div class="slaid slaid-tab">
-              <div class="swiper mySwiper1">
+              <div class="swiper mySwiperTable">
                   <div class="swiper-wrapper table">
-                   <div class="swiper-slide tabl"> 
-                    <div class="tabl-uslugi">Ремонтные услуги</div>
-                    <div>Диагностика</div>
-                    <div class="tabl-cena">Цена</div>
-                    <div>Бесплатно</div>
-                    <div class="tabl-srok">Срок</div>
-                    <div class="tabl-zakaz">
-                    <div>30 мин</div>
-                    <div class="call call__click">
-                        <div class="call__text">Заказать </div>
-                        <div class="call__goside">
-                        <img src="./img/goside.png" alt="scrin">
-                       </div>
-                    </div>
-                </div>
-                </div>
-
-                <div class="swiper-slide tabl"> 
-                    <div class="tabl-uslugi">Ремонтные услуги</div>
-                    <div>Диагностика</div>
-                    <div class="tabl-cena">Цена</div>
-                    <div>Бесплатно</div>
-                    <div class="tabl-srok">Срок</div>
-                    <div class="tabl-zakaz">
-                    <div>30 мин</div>
-                    <div class="call call__click">
-                        <div class="call__text">Заказать </div>
-                        <div class="call__goside">
-                        <img src="./img/goside.png" alt="scrin">
-                       </div>
-                    </div>
-                </div>
-                </div>
-
-                <div class="swiper-slide tabl"> 
-                    <div class="tabl-uslugi">Ремонтные услуги</div>
-                    <div>Диагностика</div>
-                    <div class="tabl-cena">Цена</div>
-                    <div>Бесплатно</div>
-                    <div class="tabl-srok">Срок</div>
-                    <div class="tabl-zakaz">
-                    <div>30 мин</div>
-                    <div class="call call__click">
-                        <div class="call__text">Заказать </div>
-                        <div class="call__goside">
-                        <img src="./img/goside.png" alt="scrin">
-                       </div>
-                    </div>
-                </div>
-                </div>
-
-                <div class="swiper-slide tabl"> 
+                   <div class="swiper-slide swiper-slide__tabl">
+                    <div class="tabl">
                     <div class="tabl-uslugi">Ремонтные услуги</div>
                     <div>Диагностика</div>
                     <div class="tabl-cena">Цена</div>
@@ -305,6 +255,63 @@
                 </div>
                 </div>
             </div>
+            <div class="swiper-slide swiper-slide__tabl">
+                <div class="tabl">
+                    <div class="tabl-uslugi">Ремонтные услуги</div>
+                    <div>Диагностика</div>
+                    <div class="tabl-cena">Цена</div>
+                    <div>Бесплатно</div>
+                    <div class="tabl-srok">Срок</div>
+                    <div class="tabl-zakaz">
+                    <div>30 мин</div>
+                    <div class="call call__click">
+                        <div class="call__text">Заказать </div>
+                        <div class="call__goside">
+                        <img src="./img/goside.png" alt="scrin">
+                       </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="swiper-slide swiper-slide__tabl">
+                <div class="tabl">
+                    <div class="tabl-uslugi">Ремонтные услуги</div>
+                    <div>Диагностика</div>
+                    <div class="tabl-cena">Цена</div>
+                    <div>Бесплатно</div>
+                    <div class="tabl-srok">Срок</div>
+                    <div class="tabl-zakaz">
+                    <div>30 мин</div>
+                    <div class="call call__click">
+                        <div class="call__text">Заказать </div>
+                        <div class="call__goside">
+                        <img src="./img/goside.png" alt="scrin">
+                       </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="swiper-slide swiper-slide__tabl">
+                <div class="tabl">
+                    <div class="tabl-uslugi">Ремонтные услуги</div>
+                    <div>Диагностика</div>
+                    <div class="tabl-cena">Цена</div>
+                    <div>Бесплатно</div>
+                    <div class="tabl-srok">Срок</div>
+                    <div class="tabl-zakaz">
+                    <div>30 мин</div>
+                    <div class="call call__click">
+                        <div class="call__text">Заказать </div>
+                        <div class="call__goside">
+                        <img src="./img/goside.png" alt="scrin">
+                       </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            </div>
+                 <div class="pad"></div>
                   <div class="swiper-pagination"></div>
                 </div>  
             </div>
